tests/ui/no-custom.stderr
error[E0277]: the trait bound `Thing: RefCastCustom<String>` is not satisfied
 --> tests/ui/no-custom.rs:8:36
  |
8 |     pub fn ref_cast(s: &String) -> &Self;
  |                                    ^^^^^ the trait `RefCastCustom<String>` is not implemented for `Thing`
  |
  = help: the following other types implement trait `ref_cast::custom::RefCastOkay<From>`:
            <&'a To as ref_cast::custom::RefCastOkay<&'a From>>
            <&'a mut To as ref_cast::custom::RefCastOkay<&'a mut From>>
  = note: required for `&Thing` to implement `ref_cast::custom::RefCastOkay<&String>`
note: required by a bound in `ref_cast_custom`
 --> src/custom.rs
  |
  |     To: RefCastOkay<From>,
  |         ^^^^^^^^^^^^^^^^^ required by this bound in `ref_cast_custom`
